Build/third-party-libraries/packages/nuget.org/nunit/4.1.0/readme.md
NUnit [4.1.0](https://www.nuget.org/packages/NUnit/4.1.0)
--------------------

Used by: AspNetCore internal, AspNetCoreNSwag internal, AspNetCoreSwashbuckle internal, ClientDI internal, Core internal, DesignTime internal, Emit internal, MessagePack internal, SelfHost internal

Target frameworks: net462, net6.0, net7.0, net8.0

License: [MIT](../../../../licenses/mit) 

- package license: [MIT](https://licenses.nuget.org/MIT) 
- repository license: [MIT](https://github.com/nunit/nunit) 
- project license: [Unknown](https://nunit.org/) 

Description
-----------
NUnit is a unit-testing framework for all .NET languages.
        It can run on macOS, Linux and Windows operating systems.
        NUnit can be used for a wide range of testing, from unit testing with TDD to full-fledged system and integration testing.
        It is a non-opinionated, broad and deep framework with multiple different ways to assert that your code behaves as expected. Many aspects of NUnit can be extended to suit your specific purposes.

        The latest version, version 4, is an upgrade from the groundbreaking NUnit 3 framework. It is a modernized version, aimed at taking advantage of the latest .NET features and C# language constructs.

        If you are upgrading from NUnit 3, be aware of the breaking changes (https://docs.nunit.org/articles/nunit/release-notes/breaking-changes.html#nunit-40). Please see the NUnit 4 Migration Guide (https://docs.nunit.org/articles/nunit/release-notes/Nunit4.0-MigrationGuide.html) and take care to prepare your NUnit 3 code before you do the upgrade.

      Supported platforms:
      - .NET Framework 4.6.2+
      - .NET 6.0+

Remarks
-----------
no remarks


Dependencies 0
-----------


*This page was generated by a tool.*